# mcp_server

./: chatbox.ipynb  mcp_chatbot.py  mcp_chatbot_L5.py  mcp_chatbot_L6.py  mcp_chatbot_L7.py  pyproject.toml  requirements.txt  research_server.py
outputs/: code.txt  mcp_architecture_diagram.txt  mcp_summary.md  results.txt
papers/generative_ai_applications/: papers_info.json
papers/history/: papers_info.json
papers/interesting_term/: papers_info.json
papers/llm/: papers_info.json
papers/search_papers_about_llm_for_recomment_system/: papers_info.json
